src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Alias_1__c</fullName>
        <label>Account Alias 1</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Alias_2__c</fullName>
        <label>Account Alias 2</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Alias_3__c</fullName>
        <label>Account Alias 3</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Legal_Name__c</fullName>
        <label>Account Legal Name</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_Renewal_Date__c</fullName>
        <label>Final Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grandfathered_PPACA_Status__c</fullName>
        <label>Grandfathered PPACA Status</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mixed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Jurisdiction__c</fullName>
        <label>Jurisdiction</label>
        <picklist>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Other_Jurisdiction__c</fullName>
        <label>Other Jurisdiction</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Date__c</fullName>
        <formula>CASE( Renewal_Anniversary_Month__c , 
&apos;JAN&apos;,DATE( YEAR( TODAY() ) ,1,1), 
&apos;FEB&apos;,DATE( YEAR( TODAY() ) ,2,1), 
&apos;MAR&apos;,DATE( YEAR( TODAY() ) ,3,1), 
&apos;APR&apos;,DATE( YEAR( TODAY() ) ,4,1), 
&apos;MAY&apos;,DATE( YEAR( TODAY() ) ,5,1), 
&apos;JUN&apos;,DATE( YEAR( TODAY() ) ,6,1), 
&apos;JUL&apos;,DATE( YEAR( TODAY() ) ,7,1), 
&apos;AUG&apos;,DATE( YEAR( TODAY() ) ,8,1), 
&apos;SEP&apos;,DATE( YEAR( TODAY() ) ,9,1), 
&apos;OCT&apos;,DATE( YEAR( TODAY() ) ,10,1), 
&apos;NOV&apos;,DATE( YEAR( TODAY() ) ,11,1), 
&apos;DEC&apos;,DATE( YEAR( TODAY() ) ,12,1), 
NULL)</formula>
        <label>Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Test_Account_URL__c</fullName>
        <formula>left($Api.Enterprise_Server_URL_200 , FIND(&quot;/&quot;, $Api.Enterprise_Server_URL_200, 9))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account URL</label>
        <type>Text</type>
    </fields>
</CustomObject>